--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,27 @@
     transform: rotate(360deg);
   }
 }
+body{
+  margin: auto;
+  width: 50%;
+  display: flex;
+  flex-direction: column;
+  border: 1px solid #efefef;
+  padding: 30px;
+}
+
+.todoItem{
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+  padding: 30px 20px 0;
+  width: 70%;
+  border-bottom: 1px solid #cecece;
+  font-family: sans-serif;
+  font-weight: 100;
+  font-size: 15px;
+  color: #333333;
+}
+input[type=checkbox]{
+  margin-right: 10px;
+}
